kanc/src/tests/sample_code/should_fail/single_file/type_check/match_case_param_labeledness_mismatch/unlabeled_variant_labeled_case.k
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let plus = fun plus(-a: Nat, b: Nat): Nat {
    match a {
        .O => b,
        .S(:pred) => Nat.S(plus(pred, b)),
    }
};
